--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,10 @@
   box-sizing: border-box;
 }
 
+.lock {
+  overflow-y: hidden;
+}
+
 body,
 html {
   height: 100%;
@@ -125,6 +129,9 @@ html {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-right: 1.375rem;
   -webkit-transition: left 0.3s ease 0s, opacity 0.3s ease 0s;
   transition: left 0.3s ease 0s, opacity 0.3s ease 0s;
@@ -1419,7 +1426,7 @@ html {
     -ms-flex-direction: column;
     flex-direction: column;
     gap: 3rem;
-    padding: 11rem 1rem 8rem 1rem;
+    padding: 5rem 1rem 8rem 1rem;
     overflow-y: auto;
   }
 
@@ -1619,6 +1626,7 @@ html {
 
   .item-steps {
     max-width: 30rem;
+    gap: 5rem;
   }
 
   .item-steps__number {
